Fix some layout issues - part 1

--- a/styles/carousel-3d.css
+++ b/styles/carousel-3d.css
@@ -1,6 +1,6 @@
 .banner h1.large {
     color: #5a5a5a;
-    font-size: calc(20vw) !important;
+    font-size: calc(18vw) !important;
     line-height: 1em;
 }
 
@@ -30,23 +30,55 @@
 
 .banner {
     display: flex;
-    margin: auto;
-    width: calc(100vw - 20%);
-    height: calc(100vw / (16/9));
+    justify-content: center;
+    align-items: center;
     text-align: center;
     overflow: visible;
     position: relative;
-    justify-content: center;
-    align-items: center;
+}
+
+:root {
+  --carousel-card-width: calc(100vw * 0.35);
+}
+
+/* ---------------------------------------------------- */
+/*  */
+/* ---------------------------------------------------- */
+.banner {
+  transform: perspective(1000px) scale(0.75) translateY(300px);
+  /* transform: perspective(2000px) scale(0.75) translateY(300px); */
+}
+/* height: calc(var(--carousel-card-width) * 16 / 9);
+transform: translateY(-235px); */
+
+/* ---------------------------------------------------- */
+/* Calculations of container size.                      */
+/* - 100% of view port - n%                             */
+/* ---------------------------------------------------- */
+.banner .slider {
+    aspect-ratio: 16/9;
+    /* transform: rotateX(-18deg); */
+    /* transform: perspective(1000px); */
+    /* top: calc(min(100vw, 100vh) * 0.1); */
+    width: var(--carousel-card-width);
+    /* transform-origin: center center -2000px; */
+}
+
+/* ---------------------------------------------------- */
+/* Calculations of card width, et.                      */
+/* - rotateY   ; rotation of card circle                */
+/* - translateZ: diameter of circle based on card width */
+/* ---------------------------------------------------- */
+.banner .slider .item {
+    transform: 
+        rotateY(calc( (var(--position) - 1) * (360deg / var(--quantity)) ))
+        translateZ(calc( var(--carousel-card-width) / (2 * sin(180deg / var(--quantity))) ));
+    font-size: calc(100vw * 0.0125);
 }
 
 .banner .slider {
     position: absolute;
-    top: calc(min(100vw, 100vh) * 0.1);
-    width: calc(100vw - 80%);
-    aspect-ratio: 16/9;
     transform-style: preserve-3d;
-    transform: perspective(1000px);
     animation-delay: 0ms;
     z-index: 2;
     opacity: 1;
@@ -58,13 +90,12 @@
     cursor: pointer !important;
     position: absolute;
     inset: 0 0 0 0;
-    transform: 
-        rotateY(calc( (var(--position) - 1) * (360 / var(--quantity)) * 1deg))
-        translateZ(27vw);
     box-shadow: 0 2.2rem 3.25rem rgba(255, 254, 247, 0.15);
-    font-size: calc(100vw * 0.0125);
     user-select: none;
+    line-height: normal;
 }
+
+
 
 /* .banner .slider .item::after {
   content: '';
