--- a/styles/main.css
+++ b/styles/main.css
@@ -3,25 +3,26 @@
 @import url("./menu-mobile.css");
 @import url("./pages.css");
 @import url("./footer.css");
-@import url("./carousel.css");
 @import url("./carousel-2d.css");
+@import url("./carousel-3d.css");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: var(--font-sans);
+  color: var(--theme-color);
 }
 
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh; /* on mobile - address bar */
   margin: 0;
   background-color: black;
   background-image: url("../images/background-wave-1.png");
   background-repeat: repeat-y;
-  background-size: cover;
+  background-size: contain;
   /* background-blend-mode: luminosity; */
   /* filter: brightness(0.25) hue-rotate(335deg); */
   /* filter: hue-rotate(335deg); */
@@ -64,11 +65,11 @@ svg {
   transform: scale(1.5);
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .hide-on-mobile { display: none; }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 769px) {
   .hide-on-desktop { display: none; }
 }
 
