--- a/styles/pages.css
+++ b/styles/pages.css
@@ -1,41 +1,17 @@
+/* --------------------------------------------------- */
+/* Shared                                              */
+/* --------------------------------------------------- */
 
 page {
   display: none;
+  color: var(--theme-color-page);
+  flex: 1;
+  border: 1px solid yellowgreen;
 }
 
 page.active {
   display: block;
 }
-
-page {
-  color: var(--theme-color-page);
-  margin-bottom: var(--size-8);
-}
-
-/* Home page */
-
-page.home {
-  flex: 1;
-  padding: var(--size-4);
-}
-
-page.home .h1 {
-  font-size: var(--size-relative-10);
-}
-
-page.home .h3 {
-  font-size: var(--size-relative-8);
-}
-
-page.home .p {
-  font-size: var(--size-relative-4);
-}
-
-page.home {
-  overflow-y: scroll;
-}
-
-/* Shared */
 
 /* Goes with: .app-icons div { justify-content: end; } */
 .app-icons {
@@ -68,18 +44,46 @@ page.home {
   padding: max(1vw, 10px);
 }
 
+page.classroom,
+page.volcano,
+page.city-rain {
+  margin: var(--size-4);
+}
+
 /* --------------------------------------------------- */
-/* Classroom page                                      */
+/* Home page                                           */
 /* --------------------------------------------------- */
 
-page.city-rain {
-  margin-inline: var(--size-4);
+page.home.active { display: flex; }
+page.home {
+  padding: var(--size-4);
+  overflow-y: scroll;
+  justify-content: center;
+  align-items: start;
+  width: 100vw;
+  height: 100dvh;
 }
+
+page.home .h1 {
+  font-size: var(--size-relative-10);
+}
+
+page.home .h3 {
+  font-size: var(--size-relative-8);
+}
+
+page.home .p {
+  font-size: var(--size-relative-4);
+}
+
+/* --------------------------------------------------- */
+/* City rain page                                      */
+/* --------------------------------------------------- */
 
 page.city-rain production {
   display: grid;
   gap: var(--size-3);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   max-width: 50rem;
   margin-inline: auto;
 }
@@ -88,7 +92,7 @@ page.city-rain production .grid-col-span-2 {
   grid-column: span 2;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   page.city-rain production {
     grid-template-columns: 1fr;
   }
@@ -106,14 +110,10 @@ page.city-rain production .grid-col-span-2 {
 /* Volcano page                                        */
 /* --------------------------------------------------- */
 
-page.volcano {
-  margin-inline: var(--size-4);
-}
-
 page.volcano production {
   display: grid;
   gap: var(--size-3);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   max-width: 50rem;
   margin-inline: auto;
 }
@@ -122,7 +122,7 @@ page.volcano production .grid-col-span-2 {
   grid-column: span 2;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   page.volcano production {
     grid-template-columns: 1fr;
   }
@@ -140,14 +140,10 @@ page.volcano production .grid-col-span-2 {
 /* Classroom page                                      */
 /* --------------------------------------------------- */
 
-page.classroom {
-  margin-inline: var(--size-4);
-}
-
 page.classroom production {
   display: grid;
   gap: var(--size-3);
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   max-width: 50rem;
   margin-inline: auto;
 }
@@ -160,7 +156,7 @@ page div.content {
   margin-top: var(--size-8);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   page.classroom production {
     grid-template-columns: 1fr;
   }
@@ -179,8 +175,12 @@ page div.content {
 /* --------------------------------------------------- */
 
 page.biography {
-  width: 60%;
   margin-inline: auto;
+}
+
+page.biography {
+  width: 60%;
+  /* margin-inline: auto; */
   padding: 1rem;
   color: var(--theme-color-page);
 }
@@ -196,10 +196,9 @@ page.biography p {
   margin-bottom: var(--size-4);
   display: block;
   width: auto;
-  box-sizing: border-box;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   page.biography {
     width: 100%;
     margin-inline: auto;
